refactoring irrigation round and server configurations to utilize StringTemplate
--HG--
rename : src/main/java/edu/asu/commons/irrigation/client/MainIrrigationGameWindow.java => src/main/java/edu/asu/commons/irrigation/client/GamePanel.java